<resources>
    <string name="app_name">Arraykart</string>
    <string name="arraykart">Arraykart</string>
    <string name="search_from_arraykart">Search from Arraykart!</string>
    <string name="food">Food</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_products">Top Products</string>
    <string name="product_name_technical_name">Product Name(Technical Name)</string>
    <string name="volume">Volume:</string>
    <string name="offers">Offers:</string>
    <string name="special_price">Special Price</string>
    <string name="price">Price:</string>
    <string name="product_description">Product Description:</string>
    <string name="product_details">Product Details:</string>
    <string name="see_more">See More</string>
    <string name="back">back</string>
    <string name="cart">cart</string>
    <string name="search">search</string>
    <string name="companyname">companyName</string>
    <string name="company_icon">company icon</string>
    <string name="product_details_title">Product Details</string>
    <string name="products">Products</string>
    <string name="when_to_use_offer">When to use Offer</string>
    <string name="offer_valid_until">Offer Valid Until:</string>
    <string name="arraykart_is_committed_to_help_smes_of_indian_agriculture_by_delivering_modern_services_to_sustain_this_competitive_digital_era_we_started_delivering_crop_inputs_and_farm_machinery_with_product_genuinity_check_at_the_door_step_of_agriculture_dealers_and_retailers_since_then_we_are_constantly_evolving_with_our_self_driven_team">Arraykart is committed to help SMEs of Indian Agriculture by delivering modern services to sustain this competitive digital era. We started delivering Crop Inputs and Farm Machinery with product genuinity check at the door-step of Agriculture Dealers and Retailers. Since then, we are constantly evolving with our self-driven team.</string>
    <string name="to_add_to_this_we_provide_insights_on_seasonal_product_demand_and_the_best_time_to_purchase_it_to_win_over_the_price_volatility_we_also_offer_agronomist_support_to_the_retailers_and_their_customers_by_helping_them_with_crop_input_suggestions_to_crop_diseases_we_are_simplifying_the_process_from_customer_onboarding_to_product_delivery_and_making_them_happy_with_a_great_experience">To add to this, we provide insights on seasonal product demand and the best time to purchase it to win over the price volatility. We also offer Agronomist support to the retailers and their customers by helping them with crop input suggestions to crop diseases. We are simplifying the process from customer onboarding to product delivery and making them happy with a great experience.</string>
    <string name="we_are_building_an_inventory_management_service_for_smes_to_manage_their_inventory_digitally_have_clear_visibility_of_stocks_avoid_dead_inventory_and_many_more_we_understand_that_each_business_requires_working_capital_to_run_and_grow_its_business_for_that_we_are_working_to_offer_digital_lending_to_smes_by_offering_a_line_of_credit_to_meet_the_requirements_of_modern_e_commerce_business_we_are_building_a_digital_shop_for_smes_to_connect_and_serve_their_local_customers_digitally">We are building an Inventory Management service for SMEs to manage their inventory digitally, have clear visibility of stocks, avoid dead inventory, and many more. We understand that each business requires working capital to run and grow its business. For that, we are working to offer Digital Lending to SMEs by offering a line of credit. To meet the requirements of modern e-commerce business, we are building a Digital Shop for SMEs to connect and serve their local customers digitally.</string>
    <string name="we_have_a_highly_motivated_team_from_different_geographies_with_different_skill_sets_the_team_s_synergy_is_helping_us_in_building_the_above_services_with_limited_resources_our_working_culture_encourages_each_teammate_to_achieve_their_personal_and_professional_goals_in_life">We have a highly motivated team from different geographies with different skill sets. The team\'s synergy is helping us in building the above services with limited resources. Our working culture encourages each teammate to achieve their personal and professional goals in life.</string>
    <string name="our_vision_is_to_upgrade_smes_from_conventional_business_models_to_modern_business_models_without_changing_their_core_business_principles">Our vision is to upgrade SMEs from conventional business models to modern business models without changing their core business principles.</string>
    <string name="quot_we_handle_it_quot">\"We Handle It\"</string>
    <string name="my_profile">My Profile</string>
    <string name="my_address">My Address</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="report_bug">Report Bug</string>
    <string name="made_with_in">Made with ❤ in 🇮🇳</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="return_and_replace_policy">Return and Replace Policy</string>
    <string name="kyc_document">KYC Document</string>
    <string name="my_orders">My Orders</string>
    <string name="shop_name">Shop Name*</string>
    <string name="full_address">Full Address*</string>
    <string name="city_town">City/Town*</string>
    <string name="address">Address</string>
    <string name="pin_code">PIN Code*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="submit">Submit</string>
    <string name="report_bug_here">Report bug here</string>
    <string name="describe_in_detail_about_the_bug_at_least_10_characters">Describe in detail about the bug. (at least 10 characters)</string>
    <string name="report">REPORT</string>
    <string name="your_cart">Your Cart</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="contact_us_through">Contact us through</string>
    <string name="_9311900913">9311900913</string>
    <string name="mail">yourfriends@arraykart.com</string>
    <string name="upload_kyc_document">Upload KYC Document:</string>
    <string name="name">Name</string>
    <string name="enter_your_full_name">Enter your full Name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="email">Email</string>
    <string name="enter_the_otp_code">Enter the OTP code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_will_expire_in">OTP will expire in</string>
    <string name="otp_has_been_sent_to_your_phone_number">OTP has been sent to your phone number</string>
    <string name="this_privacy_policy_applies_to_the_arraykart_android_application">This Privacy Policy applies to the Arraykart Android Application</string>
    <string name="we_collect_information_directly_from_you_we_collect_information_directly_from_you_when_you_register_for_an_event_or_buy_tickets_we_also_collect_information_if_you_post_a_comment_on_our_applications_or_ask_us_a_question_through_phone_or_email">We collect information directly from you. We collect information directly from you when you register for an event or buy tickets. We also collect information if you post a comment on our Applications or ask us a question through phone or email.</string>
    <string name="we_use_information_to_send_you_transactional_communications_we_might_send_you_emails_or_sms_about_your_account_or_a_ticket_purchase">We use information to send you transactional communications. We might send you emails or SMS about your account or a ticket purchase.</string>
    <string name="we_may_share_information_if_we_think_we_have_to_in_order_to_comply_with_the_law_or_to_protect_ourselves_we_will_share_information_to_respond_to_a_court_order_or_subpoena_we_may_also_share_it_if_a_government_agency_or_investigatory_body_requests_or_we_might_also_share_information_when_we_are_investigating_potential_fraud">We may share information if we think we have to in order to comply with the law or to protect ourselves. We will share information to respond to a court order or subpoena. We may also share it if a government agency or investigatory body requests. Or, we might also share information when we are investigating potential fraud.</string>
    <string name="we_may_share_information_with_any_successor_to_all_or_part_of_our_business_for_akfrontend_if_part_of_our_business_is_sold_we_may_give_our_customer_list_as_part_of_that_transaction">We may share information with any successor to all or part of our business. For akfrontend, if part of our business is sold we may give our customer list as part of that transaction.</string>
    <string name="we_may_share_your_information_for_reasons_not_described_in_this_policy_we_will_tell_you_before_we_do_this">We may share your information for reasons not described in this policy. We will tell you before we do this.</string>
    <string name="email_opt_out">Email Opt-Out</string>
    <string name="third_party_applications">Third party Applications</string>
    <string name="you_can_opt_out_of_receiving_our_marketing_emails_to_stop_receiving_our_promotional_emails_please_email_unsubscriber_arraykart_com_it_may_take_about_ten_days_to_process_your_request_even_if_you_opt_out_of_getting_marketing_messages_we_will_still_be_sending_you_transactional_messages_through_email_and_sms_about_your_purchases">You can opt out of receiving our marketing emails. To stop receiving our promotional emails, please email unsubscriber@arraykart.com. It may take about ten days to process your request. Even if you opt out of getting marketing messages, we will still be sending you transactional messages through email and SMS about your purchases.</string>
    <string name="we_will_share_information_with_our_business_partners_this_includes_a_third_party_who_provide_or_sponsor_an_event_or_who_operates_a_venue_where_we_hold_events_our_partners_use_the_information_we_give_them_as_described_in_their_privacy_policies">We will share information with our business partners. This includes a third party who provide or sponsor an event, or who operates a venue where we hold events. Our partners use the information we give them as described in their privacy policies.</string>
    <string name="we_will_share_information_with_the_event_organizers_we_share_your_information_with_event_organizers_and_other_parties_responsible_for_fulfilling_the_purchase_obligation_the_event_organizers_and_other_parties_may_use_the_information_we_give_them_as_described_in_their_privacy_policies">We will share information with the event organizers. We share your information with event organizers and other parties responsible for fulfilling the purchase obligation. The event organizers and other parties may use the information we give them as described in their privacy policies.</string>
    <string name="if_you_enjoy_using_arraykart_please_take_a_moment_to_rate_it_thanks_for_your_support">If you enjoy using Arraykart, please take a moment to rate it. Thanks for your support!</string>
    <string name="remind_me_later">⌛ Remind me later</string>
    <string name="no_thank">😒 No, thanks</string>
    <string name="rate_arraykart">⭐ Rate Arraykart</string>
    <string name="search_product_search_category_search_crop_search_technical_name_search_brand">\'Search Product\' \'Search Category\' \'Search Crop\' \'Search Technical Name\' \'Search Brand\'</string>
    <string name="search_results">Search Results</string>
    <string name="no_products_found">No Products Found!</string>
</resources>