<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/section_padding"
    tools:context=".Home.Fragments.Account.AboutUsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/scroll_view_bottom_margin">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_top_margin"
            android:text="@string/arraykart_is_committed_to_help_smes_of_indian_agriculture_by_delivering_modern_services_to_sustain_this_competitive_digital_era_we_started_delivering_crop_inputs_and_farm_machinery_with_product_genuinity_check_at_the_door_step_of_agriculture_dealers_and_retailers_since_then_we_are_constantly_evolving_with_our_self_driven_team"
            android:textColor="@color/text"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_top_margin"
            android:text="@string/to_add_to_this_we_provide_insights_on_seasonal_product_demand_and_the_best_time_to_purchase_it_to_win_over_the_price_volatility_we_also_offer_agronomist_support_to_the_retailers_and_their_customers_by_helping_them_with_crop_input_suggestions_to_crop_diseases_we_are_simplifying_the_process_from_customer_onboarding_to_product_delivery_and_making_them_happy_with_a_great_experience"
            android:textColor="@color/text"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_top_margin"
            android:text="@string/we_are_building_an_inventory_management_service_for_smes_to_manage_their_inventory_digitally_have_clear_visibility_of_stocks_avoid_dead_inventory_and_many_more_we_understand_that_each_business_requires_working_capital_to_run_and_grow_its_business_for_that_we_are_working_to_offer_digital_lending_to_smes_by_offering_a_line_of_credit_to_meet_the_requirements_of_modern_e_commerce_business_we_are_building_a_digital_shop_for_smes_to_connect_and_serve_their_local_customers_digitally"
            android:textColor="@color/text"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_top_margin"
            android:text="@string/we_have_a_highly_motivated_team_from_different_geographies_with_different_skill_sets_the_team_s_synergy_is_helping_us_in_building_the_above_services_with_limited_resources_our_working_culture_encourages_each_teammate_to_achieve_their_personal_and_professional_goals_in_life"
            android:textColor="@color/text"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_top_margin"
            android:text="@string/our_vision_is_to_upgrade_smes_from_conventional_business_models_to_modern_business_models_without_changing_their_core_business_principles"
            android:textColor="@color/text"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_top_margin"
            android:text="@string/quot_we_handle_it_quot"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="@dimen/sub_heading" />
    </LinearLayout>



</ScrollView>