<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:scrollbars="none"
    android:nestedScrollingEnabled="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/section_padding"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_bottom_margin"
            android:text="@string/product_name_technical_name"
            android:textColor="@color/product_name"
            android:textSize="@dimen/product_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pDetailImg"
            android:layout_width="match_parent"
            android:layout_height="220dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_line"
            android:layout_marginBottom="@dimen/view_bottom_margin"
            android:background="@color/section_line" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/sp_bg"
            android:padding="3dp"
            android:text="@string/special_price"
            android:textColor="@color/sp_text"
            android:textSize="@dimen/text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_bottom_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/view_right_margin"
                android:layout_weight="1"
                android:text="@string/price"
                android:textColor="@color/heading"
                android:textSize="@dimen/sub_heading" />

            <TextView
                android:id="@+id/pdPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/heading" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_bottom_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/view_right_margin"
                android:layout_weight="1"
                android:text="@string/volume"
                android:textColor="@color/heading"
                android:textSize="@dimen/sub_heading" />

            <Spinner
                android:id="@+id/pdVolSpinner"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/view_bottom_margin"
                android:background="@drawable/spinner_border"
                android:dropDownWidth="130dp"
                android:spinnerMode="dropdown"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sub_section_line"
            android:layout_marginBottom="@dimen/view_bottom_margin"
            android:background="@color/section_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/marginRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_bottom_margin" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_line"
            android:layout_marginBottom="@dimen/view_bottom_margin"
            android:background="@color/section_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_bottom_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/view_right_margin"
                app:srcCompat="@drawable/ic_baseline_local_offer_24" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/offers"
                android:textColor="@color/heading"
                android:textSize="@dimen/sub_heading" />

            <ImageView
                android:id="@+id/offerToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/offersRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_line"
            android:layout_marginBottom="@dimen/view_bottom_margin"
            android:background="@color/section_line" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_bottom_margin"
            android:text="@string/product_description"
            android:textColor="@color/heading"
            android:textSize="@dimen/sub_heading" />

        <TextView
            android:id="@+id/pdDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_bottom_margin"
            android:textColor="@color/text"
            android:textSize="@dimen/text" />

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sub_section_line"
            android:layout_marginBottom="@dimen/view_bottom_margin"
            android:background="@color/section_line" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_bottom_margin"
            android:text="@string/product_details"
            android:textColor="@color/heading"
            android:textSize="@dimen/sub_heading" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pdDetailsRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_line"
            android:layout_marginBottom="@dimen/scroll_view_bottom_margin"
            android:background="@color/section_line" />

    </LinearLayout>

</ScrollView>