<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arraykart.b2b.Search.SearchActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/view_left_margin" />

        <soup.neumorphism.NeumorphCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:neumorph_shapeType="basin">

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/view_left_margin"
                android:layout_marginEnd="@dimen/view_right_margin"
                android:background="@null"
                android:ellipsize="end"
                android:focusedByDefault="true"
                android:hint="@string/search_from_arraykart"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </soup.neumorphism.NeumorphCardView>
    </LinearLayout>

    <TextView
        android:id="@+id/searchEx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/section_margin"
        android:text="@string/search_product_search_category_search_crop_search_technical_name_search_brand"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <TextView
        android:id="@+id/searchedFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/section_margin"
        android:text="@string/search_results"
        android:textColor="@color/green"
        android:textSize="@dimen/sub_heading"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />


    <TextView
        android:id="@+id/noTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_top_margin"
        android:text="@string/no_products_found"
        android:textColor="@color/text"
        android:textSize="@dimen/sub_heading"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/searchLottie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noTV"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/search"
        tools:ignore="ImageContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_top_margin"
        android:nestedScrollingEnabled="false"
        android:paddingBottom="@dimen/dynamic_tab_rv_padding_bottom"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchedFor" />


</androidx.constraintlayout.widget.ConstraintLayout>